# Robotics-Playground

./: .gitmodules  LICENSE  README.md
algorithm_ws/src/global_path_planning/launch/husky_world/: husky_world.launch
algorithm_ws/src/global_path_planning/launch/turtlebot3_ros_world/: move_base.launch  turtlebot3_ros_world.launch
algorithm_ws/src/global_path_planning/param/champ_world/: move_base_params.yaml
algorithm_ws/src/global_path_planning/param/turtlebot3_ros_world/: costmap_common_params.yaml
algorithm_ws/src/global_path_planning/rviz/: husky_world.rviz
algorithm_ws/src/global_path_planning/scripts/: path_planning_server.py
algorithm_ws/src/global_path_planning/scripts/algorithms/: astar.py  neighbors.py
algorithm_ws/src/husky/: CMakeLists.txt
algorithm_ws/src/husky/launch/: control.launch  description.launch
algorithm_ws/src/husky/urdf/: decorations.urdf.xacro  wheel.urdf.xacro
algorithm_ws/src/husky/urdf/accessories/: VLP-16.urdf.xacro  hokuyo_ust10.urdf.xacro  intel_realsense.urdf.xacro  sick_lms1xx.urdf.xacro  vlp16_mount.urdf.xacro
algorithm_ws/src/lerp_motion_planner/: CMakeLists.txt
algorithm_ws/src/lerp_motion_planner/src/: lerp_interface.cpp  lerp_planning_context.cpp
algorithm_ws/src/pp_msgs/: CMakeLists.txt  package.xml
algorithm_ws/src/pp_msgs/srv/: PathPlanningPlugin.srv
algorithm_ws/src/srv_client_plugin/: README.md
algorithm_ws/src/ur5_moveit_config/config/: lerp_planning.yaml
algorithm_ws/src/ur5_moveit_config/launch/: lerp_planning_pipeline.launch.xml  planning_context.launch
driving_ws/: README.md
driving_ws/src/Frenet_Planner_Simulation/: .gitmodules  README.md
driving_ws/src/Frenet_Planner_Simulation/Frenet_Planner_AGV/: README.md
driving_ws/src/Frenet_Planner_Simulation/car_demo-master/car_demo/: CMakeLists.txt
drone_ws/src/global_path_planning/: package.xml
drone_ws/src/global_path_planning/launch/turtlebot3_ros_world/: turtlebot3_ros_world.launch
drone_ws/src/global_path_planning/param/turtlebot3_ros_world/: global_costmap_params.yaml  (+2 more)
drone_ws/src/pp_msgs/: README.md
drone_ws/src/pp_msgs/srv/: MoveItPlugin.srv
drone_ws/src/q_learning/: CMakeLists.txt
drone_ws/src/q_learning/launch/: quadrotor_stage_1.launch  quadrotor_train_world.launch  turtlebot3_stage_1.launch
drone_ws/src/q_learning/worlds/: train_world1.world
drone_ws/src/srv_client_plugin/: CMakeLists.txt
f1_ws/src/: README.md
f1_ws/src/f1_gazebo/: CMakeLists.txt  package.xml
f1_ws/src/f1_gazebo/launch/: simple_circuit.launch
f1_ws/src/f1_gazebo/models/f1_dummy/meshes/: F1Y.dae
f1_ws/src/f1_gazebo/models/f1_renault_laser/: model.sdf  model.urdf
f1_ws/src/f1_gazebo/models/f1_renault_laser/Renault/: Wheel.mtl
f1_ws/src/f1_gazebo/models/simple_circuit/: model.sdf
f1_ws/src/f1_gazebo/rviz/: config.rviz
f1_ws/src/f1_gazebo/worlds/: simple_circuit.world
f1_ws/src/local_navigation/: CMakeLists.txt  package.xml
f1_ws/src/local_navigation/scripts/: Parser.py  Target.py  local_navigation.py  targets.json  vff.py  visualization.py
husky_ws/: README.md
husky_ws/src/dwa_local_planner/src/: dwa_planner.cpp
husky_ws/src/motion_planning/: package.xml
husky_ws/src/motion_planning/src/: actor_critic.py
robot_ws/src/husky/: package.xml
robot_ws/src/husky/launch/: teleop.launch
robot_ws/src/husky/urdf/: husky.urdf.xacro
robot_ws/src/turtlebot3/urdf/: turtlebot3_burger.urdf.xacro  turtlebot3_burger_for_autorace.urdf.xacro  turtlebot3_waffle_for_open_manipulator.urdf.xacro  turtlebot3_waffle_pi_for_open_manipulator.urdf.xacro
robot_ws/src/universal_robot/: package.xml
robot_ws/src/universal_robot/urdf/: ur.xacro
simulation_ws/src/empty_world/: CMakeLists.txt  package.xml
simulation_ws/src/empty_world/launch/: husky_empty_world.launch  turtlebot3_empty_world.launch  ur5_empty_world.launch
simulation_ws/src/husky_world/: CMakeLists.txt  package.xml
simulation_ws/src/husky_world/launch/: husky_world.launch
simulation_ws/src/ros_world/: CMakeLists.txt
spot_ws/: README.md
spot_ws/src/global_path_planning/launch/: path_planning_server.launch
spot_ws/src/global_path_planning/rviz/: turtlebot3_ros_world.rviz
spot_ws/src/global_path_planning/scripts/: path_planning_server.py
spot_ws/src/srv_client_plugin/: LICENSE
temp_ws/motion_planning/src/: actor_critic.py  ddpg.py  replay_buffer.py
temp_ws/src/motion_planning/: CMakeLists.txt
temp_ws/src/motion_planning/src/: ddpg_stage_1.py  environment.py  utils.py
turtlebot3_ws/: README.md
turtlebot3_ws/src/global_path_planning/: CMakeLists.txt
turtlebot3_ws/src/global_path_planning/scripts/: gridviz.py  path_planning_server.py
turtlebot3_ws/src/pp_msgs/: package.xml
turtlebot3_ws/src/q_learning_world/: package.xml
turtlebot3_ws/src/q_learning_world/launch/: turtlebot3_navigation.launch  turtlebot3_stage_1.launch
turtlebot3_ws/src/q_learning_world/maps/: map.pgm
turtlebot3_ws/src/ros_world/: package.xml
turtlebot3_ws/src/ros_world/launch/: turtlebot3_world.launch
turtlebot3_ws/src/ros_world/worlds/: ros_world.world
turtlebot3_ws/src/srv_client_plugin/: package.xml  scp_plugin.xml
turtlebot3_ws/src/srv_client_plugin/include/: srv_client_plugin.h
turtlebot3_ws/src/srv_client_plugin/src/: srv_client_plugin.cpp
turtlebot3_ws/src/turtlebot3/: CMakeLists.txt  package.xml
turtlebot3_ws/src/turtlebot3/urdf/: turtlebot3_burger_for_autorace_2020.urdf.xacro  turtlebot3_waffle.urdf.xacro  turtlebot3_waffle_pi.urdf.xacro
ur5_ws/: README.md
ur5_ws/src/global_path_planning/scripts/: moveit_path_planning_server.py
ur5_ws/src/lerp_motion_planner/: package.xml
ur5_ws/src/lerp_motion_planner/include/lerp_interface/: lerp_interface.h
ur5_ws/src/pp_msgs/: CMakeLists.txt
ur5_ws/src/universal_robot/: CMakeLists.txt
ur5_ws/src/universal_robot/config/: visual_parameters.yaml
ur5_ws/src/universal_robot/urdf/: ur5.xacro  ur5_macro.xacro  ur_macro.xacro  ur_macro_def.xacro
ur5_ws/src/ur5_moveit_config/config/: ur5.srdf
ur5_ws/src/ur5_moveit_config/launch/: move_group.launch
ur5_ws/src/ur5_moveit_config/scenes/: obstacles.scene
(+44 files in other folders)
