<?xml version="1.0"?>
<package format="2">
  <name>f1_gazebo</name>
  <version>0.0.0</version>
  <description>The f1_gazebo package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>   
  </export>
</package>
