<?xml version="1.0"?>
<package format="2">
  <name>universal_robot</name>
  <version>1.2.5</version>
  <description>
    3D models of the UR5 for simulation and visualization
  </description>
  <license>BSD</license>
  <maintainer email="sakshum19@gmail.com">Sakshay Mahna</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>