<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3</name>
  <version>1.2.5</version>
  <description>
    3D models of the TurtleBot3 for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <maintainer email="sakshum19@gmail.com">Sakshay Mahna</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
